--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,3 +131,36 @@ body {
 .animais-descricao section{
     margin-bottom: 3rem;
 }
+
+/* faq*/
+
+.faq-lista{
+    grid-column:2/4;
+
+}
+
+.faq-lista dt{
+    font-family:monospace;
+    font-weight: bold;
+    color:#E54;
+    margin-top: 2rem;
+    margin-right: .5rem;
+}
+
+.faq-lista dt::before{
+    content:'';
+    display:inline-block;
+    width:20px;
+    height:10px;
+    margin-right: 10px;
+    background:#FB5;
+}
+
+.faq-lista dd{
+    font-family:Helvetica;
+    margin-bottom: .5rem;
+    margin-right: 30px;
+
+}
+
+/* mapa */
