--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,10 @@ body {
     overflow-y: scroll;
 }
 
+.animais-lista li{
+    cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar{
     width:18px;
 }
@@ -240,6 +244,23 @@ body {
 }
 
 /* js */
-.texto-maior{
- font-size: 1.5rem;
+
+.js .js-tabcontent section{
+    display: none;
+}
+
+.js-tabcontent section.ativo{
+    display: block !important;
+    animation:show .5s forwards;
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: translate3d(-30px,0,0);
+    }
+    to{
+        opacity: 1;
+        transform: translate3d(0px,0,0);
+    }
 }
