--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,8 +243,13 @@ body {
     }
 }
 
+
+
+
 /* js */
 
+
+/* navegacao por tab */
 .js .js-tabcontent section{
     display: none;
 }
@@ -262,5 +267,39 @@ body {
     to{
         opacity: 1;
         transform: translate3d(0px,0,0);
+    }
+}
+
+
+/* accordion list */
+
+.js .js-accordion  dd{
+    display: none;
+
+}
+
+.js-accordion dt::after{
+    content:"↴";
+    margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after{
+    content:"⮥ ";
+}
+
+.js-accordion dd.ativo{
+    display: block;
+    animation:slideDown .5s forwards;
+}
+
+
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to{
+        opacity: 1;
+        max-height: 200px;
     }
 }
